# s3_browser

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
s3_browser/: Welcome.py
s3_browser/common/: s3_client.py
s3_browser/pages/: 1_Explorer.py  2_Policy.py
