[tool.poetry]
name = "s3-browser"
version = "0.1.0"
description = ""
authors = ["Zhang Chaobin <zhangchaobin@sensetime.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.25.0"
watchdog = "^3.0.0"
boto3 = "^1.28.32"
humanize = "^4.8.0"
streamlit-code-editor = "^0.1.8"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
